--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  kafka:
+    bootstrap-servers: localhost:29092
+    consumer:
+      group-id: "payment"
   jpa:
     properties:
       hibernate:
