--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework:spring-web'
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
 	runtimeOnly 'org.postgresql:postgresql'
