--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,14 @@ spring:
     bootstrap-servers: localhost:29092
     consumer:
       group-id: "payment"
+      auto-offset-reset: earliest
+    properties:
+      request.timeout.ms: 300000
+      heartbeat.interval.ms: 1000
+      max.poll.interval.ms: 900000
+      max.poll.records: 100
+      session.timeout.ms: 600000
+
   jpa:
     properties:
       hibernate:
